welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
  if (weekday=false && vacation=false) { 
             ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (weekday=false && vacation=false) { 
                                       ^sleepIn:3: error: reassignment to val
  } else if (weekday=true && vacation=true) {
                    ^sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (weekday=true && vacation=true) {
         ^